# gfly

./: .editorconfig  .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  SUPPORT.md  llms.txt  pyproject.toml  spec.md
.github/: CODEOWNERS  PUBLISH_CHECKLIST.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  release.yml
demo/: gfly.tape
docs/: astro.config.mjs  package.json  pnpm-lock.yaml
docs/src/: content.config.ts
docs/src/content/docs/: index.mdx
docs/src/content/docs/explanation/: contributing.md  design.md
docs/src/content/docs/guides/: authentication.md  backends.md  rate-limits.md  searching.md
docs/src/content/docs/reference/: commands.md  exit-codes.md  for-agents.md  output-schema.md
docs/src/content/docs/start/: installation.md  quickstart.md
docs/src/styles/: gfly.css
site/: index.html  og.html
src/gfly/: SKILL.md  __init__.py  __main__.py  airports.py  auth.py  backend.py  cli.py  errors.py  output.py  skill.py  throttle.py  update.py
tests/: conftest.py  test_cli.py  test_schema_snapshot.py
