[project]
name = "gfly"
version = "0.0.1"
description = "Agent-first, read-only CLI for searching Google Flights (itineraries, price calendar, multi-city)."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Ryan Wolfe" }]
keywords = ["google-flights", "flights", "cli", "agent", "llm", "travel"]
dependencies = ["click>=8.4"]

[project.optional-dependencies]
dev = ["pytest>=8"]
# Engines wired by cli-implement (kept optional so the default install stays light & headless):
#   google  -> fast-flights (pin the exact version; reverse-engineered, breaks periodically)
#   serpapi -> httpx for SerpApi's Google Flights JSON API
google = []      # e.g. ["fast-flights==3.0.2"]
serpapi = []     # e.g. ["httpx>=0.27"]
keyring = ["keyring>=24"]

[project.scripts]
gfly = "gfly.cli:main"

[project.urls]
Homepage = "https://github.com/rnwolfe/gfly"
Issues = "https://github.com/rnwolfe/gfly/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gfly"]

[tool.pytest.ini_options]
testpaths = ["tests"]
