[project]
name = "gfly"
version = "0.1.0"
description = "Agent-first, read-only CLI for searching Google Flights (itineraries, price calendar, multi-city)."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT OR Apache-2.0"
authors = [{ name = "Ryan Wolfe" }]
keywords = ["google-flights", "flights", "cli", "agent", "llm", "travel"]
dependencies = [
    "click>=8.4",              # CLI framework (schema --json via to_info_dict)
    "fast-flights>=3.0.2",     # google engine (default backend); reverse-engineered, breaks periodically
    "typing-extensions>=4.15", # undeclared transitive import of fast-flights 3.0.2 (pin defensively)
    "keyring>=25",             # serpapi key / abuse-cookie storage (env + 0600 file fallback)
    "airportsdata>=20260315",  # offline IATA resolution for `airports search`
]
# Note: the serpapi backend uses stdlib urllib — no extra dependency. fast-flights' optional
# Playwright fallback is intentionally NOT pulled (keeps the default install light & headless).

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
gfly = "gfly.cli:main"

[project.urls]
Homepage = "https://gfly.sh"
Repository = "https://github.com/rnwolfe/gfly"
Issues = "https://github.com/rnwolfe/gfly/issues"
Changelog = "https://github.com/rnwolfe/gfly/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gfly"]

[tool.pytest.ini_options]
testpaths = ["tests"]
